Fix disclaimer overlap and other minor improvements

--- a/static/styles.css
+++ b/static/styles.css
@@ -97,7 +97,7 @@ group {
   display: flex;
   justify-content: center;
   align-items: center;
-  transform: translateY(200px);
+  transform: translateY(60%);
 }
 
 group .ticks{
